Fixing line Height is too small - Issue #1988
Modified padding and removed line-height for the publish-link.

--- a/public/editor/stylesheets/publish.less
+++ b/public/editor/stylesheets/publish.less
@@ -61,14 +61,13 @@
     background: rgba(49, 134, 193,.1);
     border: solid 1px rgba(49, 134, 193,.2);
     border-radius: 2px;
-    padding: 12px 12px 10px 12px;
+    padding: 10px 12px 10px 12px;
     margin-bottom: 12px;
 
     a {
       overflow: hidden;
       text-overflow: ellipsis;
       display: inline-block;
-      line-height: 1em;
       color: #3186c1;
       text-decoration: none;
       font-weight: 600;
